--- a/Chat.html
+++ b/Chat.html
@@ -168,7 +168,7 @@
 
   <script>
     const GIST_API_URL = 'https://api.github.com/gists/6686b37f704607d66c455ceefef7fec6';
-    const GH_TOKEN = '$GITHUB_TOKEN'; // Use GitHub token securely
+    const GH_TOKEN = 'secrets.GH_TOKEN'; // Use GitHub token securely
     const ADMIN_PASSWORD = "10242048"; // Admin password
     
     let currentMessages = [];
