--- a/Chat.html
+++ b/Chat.html
@@ -199,7 +199,7 @@
       fetch(GIST_API_URL, {
         method: 'GET',
         headers: {
-          'Authorization': `Bearer ${secrets.GH_TOKEN}`, // Include the GitHub token
+          'Authorization': `Bearer ${process.env.GH_TOKEN}`, // Include the GitHub token
           'Accept': 'application/vnd.github.v3+json', // Ensure GitHub API returns JSON
         },
       })
