--- a/Chat.html
+++ b/Chat.html
@@ -298,7 +298,7 @@
       fetch(GIST_API_URL, {
         method: 'PATCH',
         headers: {
-          'Authorization': `Bearer ${process.env.GH_TOKEN}`,
+          'Authorization': `Bearer ${YOUR_GITHUB_TOKEN}`,
           'Accept': 'application/vnd.github.v3+json',
           'Content-Type': 'application/json',
         },
