--- a/Chat.html
+++ b/Chat.html
@@ -199,7 +199,7 @@
       fetch(GIST_API_URL, {
         method: 'GET',
         headers: {
-          'Authorization': `Bearer ${YOUR_GITHUB_TOKEN}`, // Include the GitHub token
+          'Authorization': `Bearer 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`, // Include the GitHub token
           'Accept': 'application/vnd.github.v3+json', // Ensure GitHub API returns JSON
         },
       })
@@ -298,7 +298,7 @@
       fetch(GIST_API_URL, {
         method: 'PATCH',
         headers: {
-          'Authorization': `Bearer ${YOUR_GITHUB_TOKEN}`,
+          'Authorization': `Bearer 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`,
           'Accept': 'application/vnd.github.v3+json',
           'Content-Type': 'application/json',
         },
