--- a/Chat.html
+++ b/Chat.html
@@ -199,7 +199,7 @@
       fetch(GIST_API_URL, {
         method: 'GET',
         headers: {
-          'Authorization': `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`, // Include the GitHub token
+          'Authorization': `Bearer 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`, // Include the GitHub token
           'Accept': 'application/vnd.github.v3+json', // Ensure GitHub API returns JSON
         },
       })
