--- a/Chat.html
+++ b/Chat.html
@@ -199,7 +199,7 @@
       fetch(GIST_API_URL, {
         method: 'GET',
         headers: {
-          'Authorization': `Bearer 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`, // Include the GitHub token
+          'Authorization': `${GH_TOKEN}`, // Include the GitHub token
           'Accept': 'application/vnd.github.v3+json', // Ensure GitHub API returns JSON
         },
       })
@@ -298,7 +298,7 @@
       fetch(GIST_API_URL, {
         method: 'PATCH',
         headers: {
-          'Authorization': `Bearer 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`,
+          'Authorization': `${GH_TOKEN}`,
           'Accept': 'application/vnd.github.v3+json',
           'Content-Type': 'application/json',
         },
