--- a/index.html
+++ b/index.html
@@ -872,10 +872,10 @@
                         <p>Share you own websites that you coded</p>
                     </a>
                     
-                    <a href="https://example.com" class="cool-button">
+                    <a href="https://negative0debuged0.github.io/ParticlePlayground" class="cool-button">
                         <i class="fas fa-star"></i>
-                        <span>Button 3</span>
-                        <p>Cool</p>
+                        <span>Particle Playground</span>
+                        <p>play around with particles</p>
                     </a>
                     
                     <a href="https://example.com" class="cool-button">
