--- a/Bookmarklets/index.html
+++ b/Bookmarklets/index.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="instructions">
                         <p>To use: Drag this button to your bookmarks bar, then click it on any website.</p>
-                        <a href="javascript:(function(){if(window.zeroCursor)return;document.body.appendChild(document.createElement('script')).src='https://9kyf5y4qcsdyjcv_9ntx.c.websim.ai/Bookmarklets/custom-cursor.js';})();" class="bookmarklet-button">Zero Custom Cursor</a>
+                        <a href="javascript:(function(){if(window.zeroCursor)return;document.body.appendChild(document.createElement('script')).src='https://negative0debuged0.github.io/Bookmarklets/custom-cursor.js';})();" class="bookmarklet-button">Zero Custom Cursor</a>
                     </div>
                 </div>
                 
@@ -57,7 +57,7 @@
                     </div>
                     <div class="instructions">
                         <p>To use: Drag this button to your bookmarks bar, then click it on any website.</p>
-                        <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://9kyf5y4qcsdyjcv_9ntx.c.websim.ai/Bookmarklets/site-theme.js';})();" class="bookmarklet-button">Zero Website Theme</a>
+                        <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://negative0debuged0.github.io/Bookmarklets/site-theme.js';})();" class="bookmarklet-button">Zero Website Theme</a>
                     </div>
                 </div>
                 
