--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <link rel="stylesheet" href="comments-styles.css">
     <script src="https://cdn.jsdelivr.net/npm/gun/gun.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gun/sea.js"></script>
+    <script type="importmap">
+    {
+      "imports": {
+        "cursor-module": "./cursor.js",
+        "options-module": "./options.js",
+        "config-module": "./config.js",
+        "themes-module": "./themes.js",
+        "particles-module": "./particles.js",
+        "colorpicker-module": "./colorPicker.js",
+        "comments-module": "./comments.js"
+      }
+    }
+    </script>
     <script type="module" src="script.js"></script>
 </head>
 <body>
