--- a/FaceMesh/index.html
+++ b/FaceMesh/index.html
@@ -29,10 +29,10 @@
                     <option value="hologram">Hologram</option>
                     <option value="geometric">Geometric</option>
                     <option value="pulse">Pulse Wave</option>
-                    <option value="matrix">Matrix</option>
+                    <option value="matrix">Matrix (Broken)</option>
                     <option value="blueprint">Blueprint</option>
                     <option value="glitch">Glitch</option>
-                    <option value="ink_sketch">Ink Sketch</option>
+                    <option value="ink_sketch">Ink Sketch (Broken)</option>
                     <option value="fire">Fire</option>
                     <option value="cyberpunk">Cyberpunk</option>
                     <option value="tribal">Tribal</option>
@@ -85,7 +85,7 @@
         </div>
         
         <div class="footer">
-            <p>Powered by MediaPipe Face Mesh</p>
+            <p>This Website may lag on some devices</p>
         </div>
     </div>
 
