--- a/DreamStatic/index.html
+++ b/DreamStatic/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="/a/dreamstatic_logo.png" alt="DREAMSTAT1C Logo" class="band-logo">
+            <img src="https://github.com/Negative0debuged0/Negative0debuged0.github.io/blob/main/Dreamstatic.png" alt="DREAMSTAT1C Logo" class="band-logo">
             <h1>DREAMSTAT1C</h1>
         </div>
         <nav>
